<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/progress_bar"
        layout="@layout/layout_full_pg" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop"
                android:src="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/poke_img"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:alpha="0.2"
                android:rotation="58"
                android:src="@drawable/pokeball"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/fav"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="32dp"
                android:contentDescription="@string/pokedex"
                android:elevation="4dp"
                android:src="@drawable/baseline_catching_pokemon_white_24dp"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/toolbar"
                layout="@layout/layout_toolbar_home"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pokemon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:letterSpacing="0.02"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                tools:text="Bulbasaur" />

            <GridLayout
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_name" />

            <ImageView
                android:id="@+id/poke_img"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/pokemon"
                android:elevation="2dp"
                app:layout_collapseMode="parallax"
                android:transitionName="imageView"
                app:layout_constraintTop_toBottomOf="@+id/type" />

            <View
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/poke_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_name"
                app:layout_constraintVertical_bias="0.8" />

            <View
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/curve_button"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/poke_img" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:isScrollContainer="true"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>